--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-s3-devkitc-1]
+[env:dfrobot_firebeetle2_esp32s3]
 platform = espressif32
-board = esp32-s3-devkitc-1
+board = dfrobot_firebeetle2_esp32s3
 framework = arduino
 monitor_speed = 115200
 platform_packages = 
