Change board to esp32-s3-devkitc-1, add blinking LED

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:dfrobot_firebeetle2_esp32s3]
+[env:esp32-s3]
 platform = espressif32
-board = dfrobot_firebeetle2_esp32s3
+board = esp32-s3-devkitc-1
 framework = arduino
 monitor_speed = 115200
 platform_packages = 
